tests/fsharp/core/queriesCustomQueryOps/negativetest.bsl

negativetest.fsx(20,5,20,17): typecheck error FS3090: An if/then/else expression may not be used within queries. Consider using either an if/then expression, or use a sequence expression instead.

negativetest.fsx(28,5,28,8): typecheck error FS3146: 'try/with' expressions may not be used in queries

negativetest.fsx(35,5,35,8): typecheck error FS3141: 'try/finally' expressions may not be used in queries

negativetest.fsx(44,9,44,17): typecheck error FS3086: A custom operation may not be used in conjunction with 'use', 'try/with', 'try/finally', 'if/then/else' or 'match' operators within this computation expression

negativetest.fsx(52,9,52,17): typecheck error FS3086: A custom operation may not be used in conjunction with 'use', 'try/with', 'try/finally', 'if/then/else' or 'match' operators within this computation expression

negativetest.fsx(60,15,60,23): typecheck error FS3086: A custom operation may not be used in conjunction with 'use', 'try/with', 'try/finally', 'if/then/else' or 'match' operators within this computation expression

negativetest.fsx(66,6,66,14): typecheck error FS3086: A custom operation may not be used in conjunction with 'use', 'try/with', 'try/finally', 'if/then/else' or 'match' operators within this computation expression
